@@ -2,6 +2,10 @@ Revision history for FusionInventory agent
 
 2.4.3 not released yet
 
+core:
+* fix some cases where a file handle was not closed
+* win32: fix a handle leak case when agent was running as service
+
 inventory:
 * win32 antivirus support update:
  - nicer product name report for ESET
